--- a/courses/csci2355/csc35500-skel/.355bashrc
+++ b/courses/csci2355/csc35500-skel/.355bashrc
@@ -1,5 +1,8 @@
 #
 # Public path aliases
 #
-
 export public49=/home/course/csc355/csc35549/public
+
+# The following aliases display paths for all .html files that are not executable by 'other' but do use SSI
+alias brokenSSI='find ~/public_html -name '\''*.html'\'' -perm -o+r ! -perm /o+x -exec grep -l '\''<!--#include virtual='\'' {} \;'
+alias brokenSSIhere='find . -name '\''*.html'\'' -perm -o+r ! -perm /o+x -exec grep -l '\''<!--#include virtual='\'' {} \;'
