Added volume group rename task

--- a/servers/dev.cs/config.env
+++ b/servers/dev.cs/config.env
@@ -1,3 +1,4 @@
 MYSQL_ROOT_PASS="password"
 PHPMYADMIN_DIR="default"      #Secure phpmyadmin default install
 NEW_HOSTNAME="default"
+NEW_VG_NAME="default"
