Added MongoDB user and role creation

--- a/servers/dev.cs/config.env
+++ b/servers/dev.cs/config.env
@@ -2,3 +2,5 @@ MYSQL_ROOT_PASS="password"
 PHPMYADMIN_DIR="default"      #Secure phpmyadmin default install
 NEW_HOSTNAME="default"
 NEW_VG_NAME="default"
+mongoAdminPass="password"
+mongoAdminUser="default"
